# ChangeLog for dev-python/django-mysqlsearch
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> django-mysqlsearch-0.1.ebuild,
  +metadata.xml:
  Added metadata.xml
